# askme

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  LICENSE  PROJECT_SUMMARY.md  README.md  all_modules.txt  conftest.py  debug_ollama.py  main.py  mypy.ini  pyproject.toml  pytest.ini  query_test.sh  test_generator.py  test_pipeline.py  tested_modules.txt
.github/: dependabot.yml
askme-tui/: Cargo.toml  README.md  test_query.sh
askme-tui/src/: app.rs  event.rs  main.rs  ui.rs
askme-tui/src/api/: client.rs  types.rs
askme-tui/src/tabs/: ingest.rs  mod.rs  query.rs  settings.rs
askme/api/: main.py
askme/api/routes/: evaluation.py  health.py  ingest.py  query.py
askme/core/: config.py  embeddings.py  logging_config.py
askme/enhancer/: query_enhancer.py
askme/evals/: embedding_metrics.py  evaluator.py  local_llm_metrics.py  pipeline_runner.py  ragas_llm.py  ragas_runner.py  storage.py  trulens_runner.py  uvloop_compat.py
askme/generation/: __init__.py  generator.py
askme/ingest/: document_processor.py  ingest_service.py
askme/rerank/: rerank_service.py
askme/retriever/: base.py  milvus_retriever.py  weaviate_retriever.py
configs/: askme.yaml
data/eval_runs/: 2b62e56d-f8f9-4bc1-8460-ac1654504447.json  64de8a66-6834-4944-a552-7af88d443d76.json  824df32e-4827-40ef-b590-037752be0aa1.json  af300a04-6c02-4119-897d-1d8e1c414cdb.json  f6d6a3ce-f103-4a0b-8ba3-7f704bf40498.json
docker/: Dockerfile  docker-compose.yaml  milvus.yaml
docs/: DEV_PROGRESS.md  askme_Design_Doc.md  askme_Product_Spec.md
scripts/: answer.sh  commit_msg_lint.py  delete_docs.py  download_models.py  eval_grid.sh  evaluate.sh  ingest.sh  rerank.sh  retrieve.sh  start-api.sh  stop-api.sh  verify_docs.py
tests/: __init__.py  conftest.py
tests/integration/: test_api_endpoints.py  test_pipeline_basic.py  test_weaviate_contract.py
tests/unit/: test_api_main.py  test_chunking_extremes.py  test_config.py  test_document_processor.py  test_embeddings.py  test_embeddings_more.py  test_generation.py  test_generators_more.py  test_ingest_routes.py  test_ingest_service.py  test_milvus_retriever.py  test_milvus_retriever_extra.py  test_milvus_retriever_more.py  test_openai_generator.py  test_pipeline_runner.py  test_query_enhancer.py  test_query_routes.py  test_query_routes_real.py  test_ragas_runner.py  test_rerank_service.py  test_retriever_base.py  test_search_fusion.py  test_trulens_runner.py  test_weaviate_retriever.py  test_weaviate_retriever_batch.py  test_weaviate_retriever_extra.py
